--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "author": "Isa Ozler",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@grafana/data": "latest",
-    "@grafana/runtime": "^8.3.2",
-    "@grafana/toolkit": "latest",
-    "@grafana/ui": "latest",
+    "@grafana/data": "^8.3.4",
+    "@grafana/runtime": "^8.3.4",
+    "@grafana/toolkit": "^8.3.4",
+    "@grafana/ui": "^8.3.4",
     "@types/react-datepicker": "^4.3.4",
     "@types/sqlstring": "^2.3.0",
     "emotion": "10.0.27"
