--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "yarn watch"
   },
   "author": "Isa Ozler",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "devDependencies": {
     "@grafana/data": "^8.3.4",
     "@grafana/runtime": "^8.3.4",
