--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@stitches/react": "^1.2.6",
+    "grafana-plugin-support": "0.4.0",
     "react-datepicker": "^4.5.0",
     "sqlstring": "^2.3.2"
   }
