--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -121,6 +121,7 @@ jobs:
           git clone https://github.com/grafana/plugin-validator
           pushd ./plugin-validator/pkg/cmd/plugincheck2
           go install
+          go mod download github.com/maxatome/go-testdeep
           popd
           plugincheck2 ${{ steps.metadata.outputs.archive }}
 
