--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "description": "",
   "scripts": {
-    "build": "grafana-toolkit plugin:build",
-    "test": "grafana-toolkit plugin:test",
-    "dev": "grafana-toolkit plugin:dev",
-    "watch": "grafana-toolkit plugin:dev --watch",
-    "sign": "grafana-toolkit plugin:sign",
-    "start": "yarn watch"
+    "build": "webpack -c ./.config/webpack/webpack.config.ts --env production",
+    "dev": "webpack -w -c ./.config/webpack/webpack.config.ts --env development",
+    "test": "jest --watch --onlyChanged",
+    "test:ci": "jest --passWithNoTests --maxWorkers 4",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx .",
+    "lint:fix": "npm run lint --fix",
+    "e2e": "npm exec cypress install && npm exec grafana-e2e run",
+    "e2e:update": "npm exec cypress install && npm exec grafana-e2e run --update-screenshots",
+    "server": "docker-compose up --build",
+    "sign": "npx --yes @grafana/sign-plugin@latest"
   },
   "homepage": "https://github.com/isaozler/grafana-shift-selector",
   "bugs": "https://github.com/isaozler/grafana-shift-selector/issues",
@@ -20,21 +25,52 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
-    "@grafana/data": "8.3.4",
-    "@grafana/runtime": "8.3.4",
-    "@grafana/toolkit": "8.3.4",
-    "@grafana/ui": "8.3.4",
-    "@types/react-datepicker": "^4.3.4",
-    "@types/sqlstring": "^2.3.0",
-    "emotion": "10.0.27"
+    "@babel/core": "^7.16.7",
+    "@grafana/e2e": "^7.0.6",
+    "@grafana/e2e-selectors": "9.3.8",
+    "@grafana/eslint-config": "^5.1.0",
+    "@grafana/tsconfig": "^1.2.0-rc1",
+    "@swc/core": "^1.3.51",
+    "@swc/helpers": "^0.5.0",
+    "@swc/jest": "^0.2.23",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "@types/jest": "^29.2.2",
+    "@types/lodash": "^4.14.188",
+    "@types/node": "^18.11.9",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.1",
+    "eslint-webpack-plugin": "^3.1.1",
+    "fork-ts-checker-webpack-plugin": "^7.2.0",
+    "glob": "^10.0.0",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "prettier": "^2.5.0",
+    "replace-in-file-webpack-plugin": "^1.0.6",
+    "sass": "1.56.1",
+    "sass-loader": "13.2.0",
+    "style-loader": "3.3.1",
+    "swc-loader": "^0.2.3",
+    "ts-node": "^10.5.0",
+    "tsconfig-paths": "^4.1.0",
+    "typescript": "^4.4.0",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-livereload-plugin": "^3.0.2"
   },
   "engines": {
     "node": ">=14"
   },
   "dependencies": {
+    "@emotion/css": "^11.1.3",
+    "@grafana/data": "^9.5.2",
+    "@grafana/runtime": "^9.5.2",
+    "@grafana/ui": "^9.5.2",
     "@stitches/react": "^1.2.8",
-    "grafana-plugin-support": "0.4.0",
-    "react-datepicker": "^4.5.0",
-    "sqlstring": "^2.3.2"
-  }
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "tslib": "2.5.0"
+  },
+  "packageManager": "npm@8.5.0"
 }
