--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@types/jest": "^29.2.2",
     "@types/lodash": "^4.14.188",
     "@types/node": "^18.11.9",
+    "@types/react-datepicker": "^4.11.2",
+    "@types/sqlstring": "^2.3.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "eslint-webpack-plugin": "^3.1.1",
@@ -69,7 +71,9 @@
     "@grafana/ui": "^9.5.2",
     "@stitches/react": "^1.2.8",
     "react": "17.0.2",
+    "react-datepicker": "^4.11.0",
     "react-dom": "17.0.2",
+    "sqlstring": "^2.3.3",
     "tslib": "2.5.0"
   },
   "packageManager": "npm@8.5.0"
