cypress tests config added

--- a/.config/tsconfig.json
+++ b/.config/tsconfig.json
@@ -11,6 +11,7 @@
     "rootDir": "../src",
     "baseUrl": "../src",
     "typeRoots": ["../node_modules/@types"],
+    "jsx": "react",
     "resolveJsonModule": true
   },
   "ts-node": {
