Grafana v10 fixes + package updates

--- a/.config/tsconfig.json
+++ b/.config/tsconfig.json
@@ -8,7 +8,7 @@
   "compilerOptions": {
     "alwaysStrict": true,
     "declaration": false,
-    "rootDir": "../src",
+    "rootDir": "..",
     "baseUrl": "../src",
     "typeRoots": ["../node_modules/@types"],
     "resolveJsonModule": true
