--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@babel/core": "^7.16.7",
-    "@grafana/e2e": "9.3.8",
+    "@grafana/e2e": "^6.7.6",
     "@grafana/e2e-selectors": "9.3.8",
     "@grafana/eslint-config": "^5.1.0",
     "@grafana/tsconfig": "^1.2.0-rc1",
@@ -71,7 +71,7 @@
     "@emotion/css": "^11.1.3",
     "@grafana/data": "^10.3.3",
     "@grafana/runtime": "^10.4.2",
-    "@grafana/toolkit": "^9.5.18",
+    "@grafana/toolkit": "^10.1.9",
     "@grafana/ui": "^10.3.3",
     "@stitches/react": "^1.2.8",
     "react": "17.0.2",
