--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "isaozler-shiftselector-panel",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "",
   "scripts": {
     "build": "webpack -c ./.config/webpack/webpack.config.ts --env production",
@@ -13,7 +13,8 @@
     "sign": "npx --yes @grafana/sign-plugin@latest",
     "test": "jest --watch --onlyChanged",
     "test:ci": "jest --passWithNoTests --maxWorkers 4",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "build-check": "npm run typecheck && npm run lint && npm run test:ci && npm run build"
   },
   "homepage": "https://github.com/isaozler/grafana-shift-selector",
   "bugs": "https://github.com/isaozler/grafana-shift-selector/issues",
@@ -26,7 +27,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@babel/core": "^7.16.7",
-    "@grafana/e2e": "9.3.8",
+    "@grafana/e2e": "^6.7.6",
     "@grafana/e2e-selectors": "9.3.8",
     "@grafana/eslint-config": "^5.1.0",
     "@grafana/tsconfig": "^1.2.0-rc1",
@@ -35,12 +36,12 @@
     "@swc/jest": "^0.2.23",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
-    "@types/jest": "^29.2.2",
+    "@types/jest": "28",
     "@types/lodash": "^4.14.188",
     "@types/node": "^18.11.9",
-    "@types/react": "17.0.42",
+    "@types/react": "18.2.24",
     "@types/react-datepicker": "^4.11.2",
-    "@types/react-dom": "17.0.14",
+    "@types/react-dom": "18.2.24",
     "@types/sqlstring": "^2.3.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
@@ -48,15 +49,15 @@
     "fork-ts-checker-webpack-plugin": "^7.2.0",
     "glob": "^10.0.0",
     "identity-obj-proxy": "3.0.0",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
+    "jest": "28",
+    "jest-environment-jsdom": "28",
     "prettier": "^2.5.0",
     "replace-in-file-webpack-plugin": "^1.0.6",
     "sass": "1.56.1",
     "sass-loader": "13.2.0",
     "style-loader": "3.3.1",
     "swc-loader": "^0.2.3",
-    "ts-node": "^10.5.0",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.4.0",
     "webpack": "^5.69.1",
@@ -64,19 +65,24 @@
     "webpack-livereload-plugin": "^3.0.2"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=18"
   },
   "dependencies": {
     "@emotion/css": "^11.1.3",
-    "@grafana/data": "^9.5.2",
-    "@grafana/runtime": "^9.5.2",
-    "@grafana/ui": "^9.5.2",
+    "@grafana/data": "^10.3.3",
+    "@grafana/runtime": "^10.4.2",
+    "@grafana/toolkit": "^10.1.9",
+    "@grafana/ui": "^10.3.3",
     "@stitches/react": "^1.2.8",
     "react": "17.0.2",
     "react-datepicker": "^4.11.0",
     "react-dom": "17.0.2",
     "sqlstring": "^2.3.3",
     "tslib": "2.5.0"
+  },
+  "resolutions": {
+    "@types/react": "18.2.24",
+    "@types/react-dom": "18.2.24"
   },
   "packageManager": "npm@8.5.0"
 }
