--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,9 +12,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Setup Node.js environment
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '18'
           cache: 'npm'
@@ -31,14 +31,23 @@ jobs:
       - name: Build frontend
         run: npm run build
 
-      - name: Start grafana docker
-        run: docker-compose up -d
+      - name: Start Grafana Docker container
+        run: |
+          docker network create grafana-network || true
+          docker run -d \
+            --name=grafana \
+            --network=grafana-network \
+            -p 3000:3000 \
+            grafana/grafana
 
       - name: Run e2e tests
         run: npm run e2e
 
-      - name: Stop grafana docker
-        run: docker-compose down
+      - name: Stop and remove Grafana Docker container
+        run: |
+          docker stop grafana
+          docker rm grafana
+          docker network rm grafana-network
 
       - name: Check for backend
         id: check-for-backend
@@ -50,20 +59,20 @@ jobs:
 
       - name: Setup Go environment
         if: steps.check-for-backend.outputs.has-backend == 'true'
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v5
         with:
           go-version: '1.19'
 
       - name: Test backend
         if: steps.check-for-backend.outputs.has-backend == 'true'
-        uses: magefile/mage-action@v2
+        uses: magefile/mage-action@v3
         with:
           version: latest
           args: coverage
 
       - name: Build backend
         if: steps.check-for-backend.outputs.has-backend == 'true'
-        uses: magefile/mage-action@v2
+        uses: magefile/mage-action@v3
         with:
           version: latest
           args: buildAll
